--- a/portfolio/bio page.html
+++ b/portfolio/bio page.html
@@ -5,34 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="biostyle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-xrxFy4QxgH2rjgjMtCCo0i5ZR2jw0JvVglgk4W4Rj0X9JeCY7fp1LZb5YIecYfBU+7MJ6d2wovHJNECXt9OUGg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-xo4C4xQ4GcEQeKeTksLBVnpbh5V2pPlE9LfsJ9mWx/dt2Xueg9S2zPGmlf8tgxG+D5d2QkmZNw6wu1C1lzgLXQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script></head>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-xo4C4xQ4GcEQeKeTksLBVnpbh5V2pPlE9LfsJ9mWx/dt2Xueg9S2zPGmlf8tgxG+D5d2QkmZNw6wu1C1lzgLXQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
+  <div class="aboutme">
+    <h1>About me</h1>
+    </div>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Jiwon Jang</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Portfolio</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+</nav>
+  
 
+  <div class="flex"> 
+    <div class="box-2">
+      <p><strong>I am an instructional designer,</strong></p>
+      <p>Learning takes place in engaging learning experience.
+      I am working with organizations and businesses where education needs to be developed.</p>
+    </div>
 
-<h1> About me</h1>
-<h2>Welcome to my portfolio website! </h2>
-<div>
-<img src="./portfolio/jiwonjang.jpg"/>
+    <div class="box-1">
+      <img src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg" alt="I can't use my photo" class="img-fluid">
+    </div>
 
+    <div class="box-4">
+      <h2>Fun facts</h2>
+      <p>1. I was working in the kindergarten in Korea.</p>
+      <p>2. I enjoy extremely spicy food.</p>
+      <p>3. I was wearing braces for 6 years.</p>
+    </div>
 
-
-<div>
-<p><strong>I am an instructional designer,</strong></p>
-<div>
-
-<p>Learning takes place in engaging learning experience.
-I am working with organizations and business where education needs to be developed.</p>
-
-<div>
-<h2>Fun facts</h2>
-<p>1. I was working in the kindergarten in Korea.</p>
-<p>2.  I enjoy extremely spicy food.</p>
-<p>3.  I was wearing braces for 6 years.</p>
-
+  </div>
+</body>
+</html>
